<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu"
    android:background="@drawable/fon">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_menu1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#A17749"
            android:text="@string/button_menu1"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_menu2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#A17749"
            android:text="@string/button_menu2"
            android:textColor="#FFFFFF"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/button_menu3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#A17749"
            android:text="@string/button_menu3"
            android:textColor="#FFFFFF"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/button_menu4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#A17749"
            android:text="@string/button_menu4"
            android:textColor="#FFFFFF"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/button_menu5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#A17749"
            android:text="@string/button_menu5"
            android:textColor="#FFFFFF"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/button_menu6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#A17749"
            android:text="@string/button_menu6"
            android:textColor="#FFFFFF"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/button_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#A17749"
            android:text="@string/exit"
            android:textColor="#FFFFFF"
            android:textSize="24sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>