<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShapeSelect"
    android:background="@drawable/fon">

    <TextView
        android:id="@+id/textView"
        android:layout_width="269dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="#F1E8E8"
        android:gravity="center_horizontal"
        android:text="@string/select_brush_shape"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/Round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/round"
            android:textColor="#000000"
            android:background="#F1E8E8"/>

        <Button
            android:id="@+id/Square"
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="#F1E8E8"
            android:textColor="#000000"
            android:text="@string/square" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="305dp"
        android:layout_height="43dp"
        android:layout_marginTop="124dp"
        android:background="#F1E8E8"
        android:gravity="center_horizontal"
        android:text="@string/adjust_brush_size"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <SeekBar
        android:id="@+id/BrushWidth"
        android:layout_width="260dp"
        android:layout_height="62dp"
        android:layout_marginTop="30dp"
        android:max="50"
        android:progress="0"
        android:progressTint="#E91E63"
        android:background="#F1E8E8"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/ColorBack"
        android:layout_width="174dp"
        android:layout_height="38dp"
        android:layout_marginBottom="70dp"
        android:background="#F1E8E8"
        android:onClick="Back"
        android:text="@string/confirm"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>