<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="play"
            android:text="@string/button_music_play"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <Button
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="pause"
            android:text="@string/button_music_pause"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

    </LinearLayout>

    <Button
        android:id="@+id/click1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="70dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="0dp"
        android:textColor="#FFFFFF"/>

    <Button
        android:id="@+id/click2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/click1"
        tools:layout_editor_absoluteX="0dp"
        android:textColor="#FFFFFF"/>

    <Button
        android:id="@+id/click3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/click2"
        tools:layout_editor_absoluteX="8dp"
        android:textColor="#FFFFFF"/>

    <Button
        android:id="@+id/click4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/click3"
        tools:layout_editor_absoluteX="0dp"
        android:textColor="#FFFFFF"/>

    <Button
        android:id="@+id/button_music_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="8dp"
        android:text="@string/button_next"
        android:textSize="15sp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/click4" />

</androidx.constraintlayout.widget.ConstraintLayout>